#18334: Evaluation form error UI alignment issue fix

--- a/src/app/interview-panel-dashboard/evaluation-form/adani-evaluation-form/adani-evaluation-form.component.scss
+++ b/src/app/interview-panel-dashboard/evaluation-form/adani-evaluation-form/adani-evaluation-form.component.scss
@@ -237,10 +237,10 @@ margin-left: 10px;
 list-style: none;
 }
 .charCount{
-  display: flex;
+  position: absolute;
   font-size: 12px;
   color:grey;
-  justify-content: flex-end;
+  right: 0;
 }
 
 .evaluationTable{
